# tblgen

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: TblGenConfig.cmake
examples/01 - Pretty Printer/: .gitignore  Backend.cpp  CMakeLists.txt  Example01.tg  run.sh
examples/02 - Animal Classifier/: .gitignore  Example02.tg  classifier.template.py  run.sh
include/tblgen/: Parser.h  Record.h  TableGen.h  Type.h  Value.h
include/tblgen/Backend/: TableGenBackends.h
include/tblgen/Basic/: DependencyGraph.h  FileManager.h  FileUtils.h  IdentifierInfo.h
include/tblgen/Lex/: Lexer.h  SourceLocation.h  Token.h  TokenKinds.h  Tokens.def
include/tblgen/Message/: Diagnostics.h  DiagnosticsEngine.h
include/tblgen/Message/def/: DiagnosticParser.cpp  DiagnosticParser.h  Diagnostics.def  Diagnostics.tg
include/tblgen/Message/def/backup/: errors_enum.def  errors_msg.def  note_enum.def  note_msg.def  warn_enum.def  warn_msg.def
include/tblgen/Message/def/parsed/: errors_enum.def  errors_msg.def  note_enum.def  note_msg.def  warn_enum.def  warn_msg.def
include/tblgen/Message/def/raw/: errors.def  warnings.def
include/tblgen/Support/: Allocator.h  Casting.h  Config.h  DynamicLibrary.h  Format.h  LiteralParser.h  Optional.h  SaveAndRestore.h  StringSwitch.h
src/: Parser.cpp  Record.cpp  TableGen.cpp  TemplateParser.cpp  Type.cpp  Value.cpp
src/Backend/: EmitClassHierarchy.cpp  PrintRecords.cpp
src/Basic/: FileManager.cpp  FileUtils.cpp  IdentifierInfo.cpp
src/Lex/: Lexer.cpp  Token.cpp
src/Message/: Diagnostics.cpp  DiagnosticsEngine.cpp
src/Support/: DynamicLibrary.cpp  Format.cpp  LiteralParser.cpp
utils/: build_script
